# Clash-GNOME

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
data/: io.github.langya.ClashGNOME.desktop  io.github.langya.ClashGNOME.metainfo.xml  io.langya.ClashGNOME.desktop  io.langya.ClashGNOME.metainfo.xml  style.css
src/: api.rs  application.rs  autostart.rs  config.rs  core_manager.rs  main.rs  mihomo_config.rs  mihomo_download.rs  subscription.rs  tray.rs  util.rs  window.rs
src/pages/: connections.rs  dashboard.rs  logs.rs  mod.rs  proxies.rs  rules.rs  settings.rs  subscriptions.rs
