[package]
name = "clash-gnome"
version = "0.1.0"
edition = "2024"
authors = ["LangYa466 <langya466@gmail.com>"]
description = "A modern GTK4/libadwaita GUI frontend for mihomo (Clash Meta)"
license = "GPL-3.0-or-later"
repository = "https://github.com/LangYa466/Clash-GNOME"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-channel = "2"
futures = "0.3"
once_cell = "1"
dirs = "5"
anyhow = "1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
eventsource-stream = "0.2"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
